pod-security-network-microsegmentation/backend-netcheck.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-netcheck
  namespace: backend
  labels:
    app: backend-netcheck
spec:
  containers:
    - name: tools
      image: nicolaka/netshoot:latest
      command:
        - sleep
        - "36000"

      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
