pod-security-network-microsegmentation/frontend-netcheck.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-netcheck
  namespace: frontend
  labels:
    app: frontend-netcheck
spec:
  containers:
    - name: tools
      image: nicolaka/netshoot:latest
      command:
        - sleep
        - "36000"

      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
