pod-security-network-microsegmentation/restricted-compliant-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: restricted-compliant
  namespace: restricted-demo
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault

  containers:
    - name: web
      image: nginxinc/nginx-unprivileged:alpine

      ports:
        - containerPort: 8080

      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL

      volumeMounts:
        - name: tmp
          mountPath: /tmp

        - name: cache
          mountPath: /var/cache/nginx

        - name: run
          mountPath: /var/run

  volumes:
    - name: tmp
      emptyDir: {}

    - name: cache
      emptyDir: {}

    - name: run
      emptyDir: {}
