pod-security-network-microsegmentation/test-connectivity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-connectivity
  namespace: default
spec:
  containers:
    - name: tools
      image: nicolaka/netshoot:latest
      command:
        - sleep
        - "36000"

      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
