pod-security-network-microsegmentation/backend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend
        tier: backend

    spec:
      containers:
        - name: httpd
          image: httpd:2.4-alpine

          ports:
            - containerPort: 80
              protocol: TCP

          resources:
            requests:
              cpu: 25m
              memory: 32Mi

            limits:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend
spec:
  selector:
    app: backend

  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP

  type: ClusterIP
